[gd_scene load_steps=13 format=3 uid="uid://brxnmcufd6edq"]

[ext_resource type="Script" path="res://addons/anima/ui/AnimationPicker/AnimationPicker.gd" id="1_cyqje"]
[ext_resource type="PackedScene" uid="uid://hrxmgulob80r" path="res://addons/anima/ui/AnimationPicker/CTAPrimaryButton.tscn" id="2_6r4ts"]
[ext_resource type="Texture2D" uid="uid://ca72ljjcye5v1" path="res://addons/anima/resources/anima-preview.png" id="2_pk6n6"]
[ext_resource type="PackedScene" uid="uid://0luo7c2dwb4l" path="res://addons/anima/ui/AnimationPicker/CTASecondaryButton.tscn" id="3_qvnfb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ikkc"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4yg3m"]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color(0.164706, 0.615686, 0.560784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0tlf5"]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color(0.913725, 0.768627, 0.415686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ixaa"]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color(0.14902, 0.27451, 0.32549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0op83"]
bg_color = Color(0.215686, 0.215686, 0.215686, 1)
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uodjx"]
bg_color = Color(0.913725, 0.768627, 0.415686, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kcx2w"]
bg_color = Color(0.8, 0.8, 0.811765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6myxi"]

[node name="AnimationPicker" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cyqje")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hovered_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/panel = SubResource("StyleBoxFlat_0ikkc")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_4yg3m")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_0tlf5")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_5ixaa")
current_tab = 0

[node name="Animations" type="HBoxContainer" parent="TabContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
metadata/_tab_index = 0

[node name="Control" type="Control" parent="TabContainer/Animations"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ControlContainer" type="CenterContainer" parent="TabContainer/Animations/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -13.0
offset_right = 25.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelDemo" type="Label" parent="TabContainer/Animations/Control/ControlContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 92
text = "Anima"

[node name="SpriteDemo" type="Sprite2D" parent="TabContainer/Animations/Control/ControlContainer"]
modulate = Color(0, 0, 0, 1)
position = Vector2(143, 63)
texture = ExtResource("2_pk6n6")

[node name="Panel" type="PanelContainer" parent="TabContainer/Animations/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_bottom = 40.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0op83")

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Animations/Control/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Animations/Control/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Animations/Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Animation duration (s):"

[node name="AnimationSpeed" type="LineEdit" parent="TabContainer/Animations/Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0.7"
alignment = 2

[node name="ControlWarning" type="MarginContainer" parent="TabContainer/Animations/Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -101.5
offset_top = -42.0
offset_right = 101.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 12

[node name="Panel" type="PanelContainer" parent="TabContainer/Animations/Control/ControlWarning"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_uodjx")

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Animations/Control/ControlWarning/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Animations/Control/ControlWarning/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Animations/Control/ControlWarning/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Skew animations do not work with a \"Control\" node"

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/Animations"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kcx2w")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Animations"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Animations/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_6myxi")

[node name="ListContainer" type="VBoxContainer" parent="TabContainer/Animations/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Animations/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Animations/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="UseAnimation" parent="TabContainer/Animations/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_6r4ts")]
layout_mode = 2
size_flags_horizontal = 3
text = "Use"

[node name="CloseButton" parent="TabContainer/Animations/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("3_qvnfb")]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[node name="Key Frames" type="HBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="CodeEdit" type="CodeEdit" parent="TabContainer/Key Frames"]
layout_mode = 2
size_flags_horizontal = 3
indent_use_spaces = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[connection signal="item_rect_changed" from="." to="." method="_on_item_rect_changed"]
[connection signal="text_submitted" from="TabContainer/Animations/Control/Panel/MarginContainer/HBoxContainer/AnimationSpeed" to="." method="_on_animation_speed_text_submitted"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/HeaderButton" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/HeaderButton" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18585" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18585" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18595" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18595" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18605" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18605" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18617" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18617" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18629" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18629" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18659" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18659" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18687" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18687" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18697" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18697" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18709" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18709" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18721" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18721" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18731" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18731" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18741" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18741" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18751" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18751" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18755" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18755" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18775" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@18775" method="_on_toggled"]
[connection signal="pressed" from="TabContainer/Animations/VBoxContainer/MarginContainer/HBoxContainer/UseAnimation" to="." method="_on_use_animation_pressed"]
[connection signal="pressed" from="TabContainer/Animations/VBoxContainer/MarginContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
